--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,10 +46,10 @@ find_package( Boost 1.49.0 REQUIRED COMPONENTS program_options system filesystem
 
 include_directories( ${Boost_INCLUDE_DIRS} )
 
-# find gurobi
-find_package(GUROBI REQUIRED)
+# # find gurobi
+# find_package(GUROBI REQUIRED)
 
-include_directories(${GUROBI_INCLUDE_DIRS})
+# include_directories(${GUROBI_INCLUDE_DIRS})
 
 # find lemon
 find_package(LEMON REQUIRED)
@@ -88,10 +88,11 @@ ELSE()
     message(STATUS "Python support is disabled")
 
     
-    message(${GUROBI_CXX_LIBRARY})
+    # message(${GUROBI_CXX_LIBRARY})
 
     add_executable(lifelong ${SOURCES} )
-    target_link_libraries(lifelong ${Boost_LIBRARIES} ${GUROBI_CXX_LIBRARY} ${GUROBI_LIBRARY} ${LEMON_LIBRARIES})
+    # target_link_libraries(lifelong ${Boost_LIBRARIES} ${GUROBI_CXX_LIBRARY} ${GUROBI_LIBRARY} ${LEMON_LIBRARIES})
+    target_link_libraries(lifelong ${Boost_LIBRARIES} ${LEMON_LIBRARIES})
     target_compile_definitions(lifelong PRIVATE PYTHON=${PYTHON_FLAG})
 ENDIF()
 
